--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tutor Hub Client</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,6 +28,6 @@
     <h1>Welcome to Tutor Hub Client</h1>
     <p>Select a page from the navigation bar.</p>
   </div>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html> 
