--- a/users.html
+++ b/users.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Users - Tutor Hub</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="users.css" rel="stylesheet">
+  <link href="css/users.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,6 +55,6 @@
       </tbody>
     </table>
   </div>
-  <script src="users.js"></script>
+  <script src="js/users.js"></script>
 </body>
 </html> 
