css,html changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
             <a class="nav-link" href="users.html">Users</a>
           </li>
         </ul>
+        <img src="images/USlogo.jpg" alt="US Flag" style="height:32px; width:auto;" class="ms-auto d-block">
+        <a href="sign.html" class="btn btn-outline-primary ms-3">Sign Up</a>
+        <a href="sign.html" class="btn btn-primary ms-2">Sign In</a>
       </div>
     </div>
   </nav>
   <div class="container mt-4" id="main-content">
-    <img src="/images/logo.png" alt="Tutor Hub Logo" class="img-fluid">
+    <img src="/images/logo3.png" alt="Tutor Hub Logo" class="img-fluid d-block mx-auto">
     <h1>Welcome to Tutor Hub Client</h1>
-    <p>Select a page from the navigation bar.</p>
+    <h1>first update us if you want to be:</h1>
+  </div>
+  <div class="container mt-5 mb-5 d-flex flex-column align-items-center">
+    <a href="sign.html" class="btn btn-primary btn-lg w-50 mb-3">Tutor</a>
+    <div class="fw-bold mb-3">or</div>
+    <a href="sign.html" class="btn btn-primary btn-lg w-50">Student</a>
   </div>
   <script src="js/main.js"></script>
 </body>
