--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         </button>
                     </div>
                     <p class="auth-text">Already have an account? <span class="login-link">Login here</span></p>
+                    <p class="auth-text"><a href="pages/admin-login.html" style="color:#0d6efd;font-weight:bold;">Admin Login</a></p>
                 </div>
             </div>
         </main>
