--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -25,6 +25,9 @@
       <a href="../index.html" class="btn btn-outline-primary w-100 mt-3">Back Home</a>
     </div>
   </div>
+  <script src="../js/main.js"></script>
+  <script src="../js/app.js"></script>
   <script src="../js/admin.js"></script>
+  <script src="../js/logout.js"></script>
 </body>
 </html> 
