--- a/pages/tutor-profile.html
+++ b/pages/tutor-profile.html
@@ -45,5 +45,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/tutor-profile.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
