--- a/pages/tutor-session.html
+++ b/pages/tutor-session.html
@@ -161,5 +161,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/tutor-session.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html> 
