--- a/pages/admin.html
+++ b/pages/admin.html
@@ -90,6 +90,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/app.js"></script>
   <script src="../js/admin.js"></script>
+  <script src="../js/logout.js"></script>
 </body>
 </html> 
