--- a/pages/chat-list.html
+++ b/pages/chat-list.html
@@ -58,5 +58,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/chat-list.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
