--- a/pages/chat.html
+++ b/pages/chat.html
@@ -80,5 +80,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/chat.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
