--- a/pages/login.html
+++ b/pages/login.html
@@ -59,5 +59,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/login.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html> 
