--- a/pages/profile-student.html
+++ b/pages/profile-student.html
@@ -207,5 +207,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/profile-student.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
