--- a/pages/profile-tutor.html
+++ b/pages/profile-tutor.html
@@ -286,5 +286,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/profile-tutor.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
