--- a/pages/register.html
+++ b/pages/register.html
@@ -100,5 +100,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/register.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
