--- a/pages/subjects.html
+++ b/pages/subjects.html
@@ -86,5 +86,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/subjects.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
