--- a/pages/tutor-earnings.html
+++ b/pages/tutor-earnings.html
@@ -148,5 +148,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/tutor-earnings.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html> 
