--- a/pages/tutor-students.html
+++ b/pages/tutor-students.html
@@ -117,5 +117,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/tutor-students.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html> 
