--- a/pages/tutors.html
+++ b/pages/tutors.html
@@ -27,8 +27,19 @@
             <div class="tutors-container">
                 <!-- Header -->
                 <div class="header">
-                    <button onclick="goBack()" class="btn-back">←</button>
-                    <h2 class="page-title" id="page-title">Math Tutors:</h2>
+                    <button class="back-to-subjects" onclick="TutorsPage.goBackToSubjects()">
+                        <span class="back-icon">←</span>
+                        Back to Subjects
+                    </button>
+                    <h2 id="page-title" class="page-title">Available Tutors:</h2>
+                </div>
+
+                <!-- Welcome Message for Students -->
+                <div id="welcome-message" class="welcome-message" style="display: none;">
+                    <div class="welcome-content">
+                        <h3>🎓 Welcome to Tutor Hub!</h3>
+                        <p>Discover amazing tutors ready to help you learn and grow.</p>
+                    </div>
                 </div>
 
                 <!-- Tutors List -->
@@ -55,5 +66,6 @@
     <script src="../js/main.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/tutors.js"></script>
+    <script src="../js/logout.js"></script>
 </body>
 </html>
